--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,14 @@
 [tox]
-envlist = py36
+envlist = py36 #,py38
 
 [testenv]
 deps = pytest
        pytest-mock
-commands = pytest {posargs}
 
+commands =
+       pytest {posargs}
+
+[testenv:style]
+deps = flake8
+commands =
+       flake8 src/ tests/ setup.py
