- add simple SBD (Sentence Boundary Disambiguation) - store sentences in Text - in Lesson, iterate over sentences of Text (not lines) - rename WordTokenizer to WBD - always word tokenize Text for Lesson - remove TokenizedText class - fix flake8 warnings - setup tox.ini to ignore certain flake8 warnings - reimplement Text.wordcounts to use sentences (not lines) - make Text.wordcounts aware of Word - in tests, move text data into files and load when required - implement flexible selection of practice sentences (option --select)

--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,16 @@ commands =
 deps = flake8
 commands =
        flake8 src/ tests/ setup.py
+
+[flake8]
+# Ignore Python idiotism and hoggoblinness:
+# E126 continuation line over-indented for hanging indent
+# E127 continuation line over-indented for visual indent
+# E201 whitespace after '('
+# E202 whitespace before ')'
+# E203 whitespace before ':'
+# E221 multiple spaces before operator
+# E226 missing whitespace around arithmetic operator
+# E241 multiple spaces after ','
+# W503 line break before binary operator
+ignore = E126,E127,E201,E202,E203,E221,E226,E241,W503
